# pwd-gen

./: README.md  pwd-gen.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
