name:                pwd-gen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/pwd-gen
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mwc-probability
                     , mwc-random >= 0.15
                     , primitive

executable pwd-gen
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , optparse-applicative
                     , pwd-gen

-- test-suite spec
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , pwd-gen
--                      , hspec
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/pwd-gen
